--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-web-browser": "~14.2.0",
     "framer-motion": "^12.23.11",
     "frappe-gantt": "^1.0.3",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.532.0",
     "react": "19.0.0",
