--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.87",
     "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.24.1",
