--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.532.0",
+    "lucide-react-native": "^0.532.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
